--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="../Front/node_modules/flowbite/dist/flowbite.js"></script>
   </body>
 </html>
